<resources>
    <string name="app_name">Disability</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="splash_note">Accessible Healthcare at Your Fingertips: Discover Nearby Hospitals and Therapy Centers using Disability App!</string>
    <string name="Get_Started">Get Started</string>
    <string name="note">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec consequat dui tristique volutpat semper. Fusce semper sit amet erat ut interdum. Etiam varius ac odio sed facilisis. Sed iaculis nisi ac odio porttitor dictum. Fusce tristique nisl a diam ornare, sit amet sollicitudin tellus hendrerit. Donec dapibus a sem sit amet tempus.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec consequat dui tristique volutpat semper. Fusce semper sit amet erat ut interdum. Etiam varius ac odio sed facilisis.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec consequat dui tristique volutpat semper. Fusce semper sit amet erat ut interdum. Etiam varius ac odio sed facilisis.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec consequat dui tristique volutpat semper. Fusce semper sit amet erat ut interdum. Etiam varius ac odio sed facilisis. </string>
    <string name="note_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec consequat dui tristique volutpat semper. Fusce semper sit amet erat ut interdum. Etiam varius ac odio sed facilisis. </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notificatin_channel">Disability_channel</string>

    <string name="dummyTitle">title</string>
    <string name="dummyNote">Lorem Ipsum dolor sit amit consectetur rises</string>
    <string name="dummyConditions">0 Conditions</string>
    <string name="Conditions">Conditions</string>
    <string name="Search.">Search....</string>
    <string name="NoDataFound">No data found</string>

    <string name="MySale">My Sale</string>
    <string name="MyPosts">My Posts</string>
    <string name="JobAlerts">Job Alerts</string>
    <string name="ChangeLanguage">Change Language</string>
    <string name="Suggestions">Suggestions</string>
    <string name="HelpAndSupport">Help and Support</string>
    <string name="ContactUs">Contact Us</string>
    <string name="UsefulLinks">Useful links</string>
    <string name="AboutUs">About Us</string>
    <string name="TermsAndConditions">Terms And Conditions</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="FAQ">FAQ</string>
    <string name="Logout">Logout</string>

    <string name="AddPost">Add Post</string>
    <string name="EditPost">Edit Post</string>
    <string name="SelectLocation">Select Location</string>
    <string name="Title">Title</string>
    <string name="description">Description</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="LandLineNumber">Land Line Number</string>
    <string name="Email">Email</string>
    <string name="Address">Address</string>
    <string name="AboutCompany">About Company</string>
    <string name="ServicesList">Services List</string>
    <string name="CoverPhoto">Cover Photo</string>
    <string name="Choose">Choose</string>
    <string name="UploadImage">Upload Image.jpg</string>
    <string name="GalleryPhotos">Gallery Photos</string>
    <string name="MultipleImages">Multiple Images</string>
    <string name="oImages">0 Images</string>
    <string name="Submit">Submit</string>
    <string name="yourLocation.">your location...</string>
    <string name="Empty">Empty!</string>
    <string name="AddSomethingToMakeMeHappy">Add something to make me happy!</string>
    <string name="addImages">add Images</string>
    <string name="NoGalleryImages">No Gallery Images</string>
    <string name="CallNow">Call Now</string>
    <string name="EnquiryNow">Enquiry Now</string>
    <string name="OurService">Our Service</string>
    <string name="Gallery">Gallery</string>
    <string name="Location">Location</string>
    <string name="JobAlertsDetails">Job Alerts Details</string>
    <string name="PostDate">Post Date</string>
    <string name="LastDate">Last Date</string>
    <string name="ProductName">Product Name</string>
    <string name="ActualPrice">Actual Price</string>
    <string name="OfferPrice">Offer Price</string>
    <string name="Colour">Colour</string>
    <string name="Brand">Brand</string>
    <string name="Features">Features</string>
    <string name="MaxCharactersAllowed">Max 200 characters allowed</string>
    <string name="AddProduct">Add Product</string>
    <string name="EditProduct">Edit Product</string>
    <string name="MyProducts">My Products</string>
    <string name="Brand.">Brand:</string>
    <string name="Color.">Colour:</string>
    <string name="PhoneNumber_">Phone Number:</string>
    <string name="AskQuestions">Ask Questions</string>
    <string name="ChatList">Chat List</string>
    <string name="CompanyInfo">Company Info</string>
    <string name="FollowUs">Follow Us</string>
    <string name="ContactUsNote">If you have any queries, get in touch with us. We will be happy to help you!</string>
    <string name="GoodMorning">Good Morning</string>
    <string name="Home">Home</string>
    <string name="Service">Service</string>
    <string name="Sale">Sale</string>
    <string name="Menu">Menu</string>
    <string name="Exit">Exit</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="ExitNote">Are you sure want to exit this app?</string>
    <string name="Hello">Hello, </string>
    <string name="EditProfile">Edit Profile</string>
    <string name="Name">Name</string>
    <string name="ChangeLocation">Change Location</string>
    <string name="Radius">Radius</string>
    <string name="ChooseFile">Choose File</string>
    <string name="UpdateProfile">Update Profile</string>
    <string name="WriteAMessage">Write a Message</string>
    <string name="LocationSelection">Location Selection</string>
    <string name="PickYourLocation">Pick Your Location</string>
    <string name="or">or</string>
    <string name="Notifications">Notifications</string>
    <string name="UsefulLinksDetails">Useful Links Details</string>


</resources>