<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activitys.Sales.AddProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include
            layout="@layout/top_layout"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:hintEnabled="false"
                    style="@style/MyDenseOutlined"
                    app:boxBackgroundColor="@color/box_gray"
                    app:boxStrokeColor="@color/box_border"
                    app:boxStrokeWidth="0dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/productNameEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:singleLine="true"
                        android:fontFamily="@font/teachers_regular"
                        android:hint="@string/ProductName"
                        android:textColorHint="@color/hintcolor"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:hintEnabled="false"
                    style="@style/MyDenseOutlined"
                    app:boxBackgroundColor="@color/box_gray"
                    app:boxStrokeColor="@color/box_border"
                    app:boxStrokeWidth="0dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ActualEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:fontFamily="@font/teachers_regular"
                        android:hint="@string/ActualPrice"
                        android:maxLength="9"
                        android:singleLine="true"
                        android:inputType="number"
                        android:textColorHint="@color/hintcolor"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:hintEnabled="false"
                    style="@style/MyDenseOutlined"
                    app:boxBackgroundColor="@color/box_gray"
                    app:boxStrokeColor="@color/box_border"
                    app:boxStrokeWidth="0dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/offerPriceEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:fontFamily="@font/teachers_regular"
                        android:hint="@string/OfferPrice"
                        android:maxLength="9"
                        android:singleLine="true"
                        android:inputType="number"
                        android:textColorHint="@color/hintcolor"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:hintEnabled="false"
                    style="@style/MyDenseOutlined"
                    app:boxBackgroundColor="@color/box_gray"
                    app:boxStrokeColor="@color/box_border"
                    app:boxStrokeWidth="0dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneNumberEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:fontFamily="@font/teachers_regular"
                        android:hint="@string/PhoneNumber"
                        android:inputType="phone"
                        android:singleLine="true"
                        android:maxLength="10"
                        android:textColorHint="@color/hintcolor"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:hintEnabled="false"
                    style="@style/MyDenseOutlined"
                    app:boxBackgroundColor="@color/box_gray"
                    app:boxStrokeColor="@color/box_border"
                    app:boxStrokeWidth="0dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/colorEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:fontFamily="@font/teachers_regular"
                        android:hint="@string/Colour"
                        android:singleLine="true"
                        android:textColorHint="@color/hintcolor"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:hintEnabled="false"
                    style="@style/MyDenseOutlined"
                    app:boxBackgroundColor="@color/box_gray"
                    app:boxStrokeColor="@color/box_border"
                    app:boxStrokeWidth="0dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/brandEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:fontFamily="@font/teachers_regular"
                        android:hint="@string/Brand"
                        android:singleLine="true"
                        android:textColorHint="@color/hintcolor"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="15dp"
                    app:hintEnabled="false"
                    style="@style/MyDenseOutlined"
                    app:boxBackgroundColor="@color/box_gray"
                    app:boxStrokeColor="@color/box_border"
                    app:boxStrokeWidth="0dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addressEdit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:hint="@string/Address"
                        android:fontFamily="@font/teachers_regular"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textColorHint="@color/hintcolor"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="15dp"
                    app:hintEnabled="false"
                    style="@style/MyDenseOutlined"
                    app:boxBackgroundColor="@color/box_gray"
                    app:boxStrokeColor="@color/box_border"
                    app:boxStrokeWidth="0dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/featuresEdit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:hint="@string/Features"
                        android:fontFamily="@font/teachers_regular"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textColorHint="@color/hintcolor"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="15dp"
                    app:hintEnabled="false"
                    style="@style/MyDenseOutlined"
                    app:boxBackgroundColor="@color/box_gray"
                    app:boxStrokeColor="@color/box_border"
                    app:boxStrokeWidth="0dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/descriptionEdit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:hint="@string/description"
                        android:fontFamily="@font/teachers_regular"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:maxLength="200"
                        android:textColorHint="@color/hintcolor"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MaxCharactersAllowed"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/teachers_medium"
                    android:layout_gravity="end"
                    android:textSize="13sp"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:background="@drawable/round_edit_gray_light_edge">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/addMoreImages"
                        android:layout_width="130dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="3dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/MultipleImages"
                            android:fontFamily="@font/teachers_regular"
                            android:textColor="@color/text"
                            android:textSize="16sp"
                            android:layout_centerVertical="true"/>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/txtFileName2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="15dp"
                        android:singleLine="true"
                        android:gravity="end"
                        android:text="@string/UploadImage"
                        android:fontFamily="@font/teachers_regular"
                        android:textColor="@color/text"
                        android:textSize="18sp"
                        android:layout_centerVertical="true"/>

                </LinearLayout>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cardSubmit"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="25dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="35dp"
                    app:cardElevation="3dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/Submit"
                        android:fontFamily="@font/teachers_medium"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:layout_centerVertical="true"/>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>


    </LinearLayout>



</layout>